--- a/kLottieViewOhos/oh-package.json5
+++ b/kLottieViewOhos/oh-package.json5
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "description": "kLottieViewOhos is a Ohos native component of kuiklyLottieView",
   "main": "Index.ets",
-  "author": "Third Party",
+  "author": "walkman707",
   "license": "Apache-2.0",
   "repository": "https://github.com/walkman707/KuiklyLottie",
   "dependencies": {
